# convoluted-mnist

./: .gitignore  README.md  convoluted-mnist.cabal  stack.yaml
src/: Main.hs
