name:                convoluted-mnist
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jonascarpay/convoluted-mnist#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mnist
  hs-source-dirs:      src
  default-extensions:  Strict
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , cereal
                     , conduit-combinators
                     , cereal-conduit
                     , conduit-extra
                     , convoluted
                     , singletons
                     , vector
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jonascarpay/convoluted-mnist
